--- a/web-demo2/pom.xml
+++ b/web-demo2/pom.xml
@@ -97,19 +97,20 @@
         </configuration>
       </plugin>
 
-    </plugins>
+      <!--maven-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>utf-8</encoding>
+        </configuration>
+      </plugin>
 
-<!--    &lt;!&ndash;maven&ndash;&gt;-->
-<!--    <plugin>-->
-<!--      <groupId>org.apache.maven.plugins</groupId>-->
-<!--      <artifactId>maven-compiler-plugin</artifactId>-->
-<!--      <version>3.1</version>-->
-<!--      <configuration>-->
-<!--        <source>1.8</source>-->
-<!--        <target>1.8</target>-->
-<!--        <encoding>utf-8</encoding>-->
-<!--      </configuration>-->
-<!--    </plugin>-->
+
+    </plugins>
 
   </build>
 
